Add validate step to GH actions
Signed-off-by: Sebastiaan van Stijn <github@gone.nl>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,10 +17,16 @@ jobs:
     runs-on: ${{ matrix.platform }}
     steps:
     - name: Install Go
-      uses: actions/setup-go@v1
+      uses: actions/setup-go@v2
       with:
         go-version: ${{ matrix.go-version }}
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Validate headers
+      run: |
+        pushd $(mktemp -d) \
+        && go get -u github.com/kunalkushwaha/ltag \
+        && popd \
+        && ./scripts/validate/fileheader
     - name: Test
       run: go test -v ./...
